tests/specs/export_namespace_enum_same_name.txt
# mod.ts
export namespace RootNs {
  export namespace NestedNs {
    export enum Foo {
    }
  }

  export enum Foo {
  }
}

# diagnostics
error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:1:1
  | 
1 | export namespace RootNs {
  | ^


error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:2:3
  | 
2 |   export namespace NestedNs {
  |   ^


error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:3:5
  | 
3 |     export enum Foo {
  |     ^


error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:7:3
  | 
7 |   export enum Foo {
  |   ^

# output.txt
Defined in file:///mod.ts:1:1

namespace RootNs

  namespace NestedNs
  enum Foo


# output.json
[
  {
    "name": "RootNs",
    "isDefault": false,
    "location": {
      "filename": "file:///mod.ts",
      "line": 1,
      "col": 0,
      "byteIndex": 0
    },
    "declarationKind": "export",
    "kind": "namespace",
    "namespaceDef": {
      "elements": [
        {
          "name": "NestedNs",
          "isDefault": false,
          "location": {
            "filename": "file:///mod.ts",
            "line": 2,
            "col": 2,
            "byteIndex": 28
          },
          "declarationKind": "export",
          "kind": "namespace",
          "namespaceDef": {
            "elements": [
              {
                "name": "Foo",
                "isDefault": false,
                "location": {
                  "filename": "file:///mod.ts",
                  "line": 3,
                  "col": 4,
                  "byteIndex": 60
                },
                "declarationKind": "export",
                "kind": "enum",
                "enumDef": {
                  "members": []
                }
              }
            ]
          }
        },
        {
          "name": "Foo",
          "isDefault": false,
          "location": {
            "filename": "file:///mod.ts",
            "line": 7,
            "col": 2,
            "byteIndex": 91
          },
          "declarationKind": "export",
          "kind": "enum",
          "enumDef": {
            "members": []
          }
        }
      ]
    }
  }
]
